source/objects/RS_Sales_Order_Extension__c/RS_Sales_Order_Extension__c.object-meta.xml
<CustomObject>
    <label>RS Sales Order Extension</label>
    <nameField>
        <displayFormat>SOE-{000000}</displayFormat>
        <label>RS Sales Order Extension Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RS Sales Order Extensions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>