source/objects/RS_Sales_Order_Extension__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The account associated to the Sales Order Header.  This field is set via trigger &#39;SetLookupFields&#39;</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>RS Sales Order Extensions</relationshipLabel>
    <relationshipName>RS_Sales_Order_Extensions</relationshipName>
    <type>Lookup</type>
</CustomField>