source/objects/RS_Sales_Order_Extension__c/fields/Launch_Call_Date__c.field-meta.xml
<CustomField>
    <fullName>Launch_Call_Date__c</fullName>
    <label>Launch Call Date</label>
    <type>Date</type>
</CustomField>