source/objects/RS_Sales_Order_Extension__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Opportunity on the Sales Order.  This field is set via the trigger &#39;SetLookupFields&#39;</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>RS Sales Order Extensions</relationshipLabel>
    <relationshipName>RS_Sales_Order_Extensions</relationshipName>
    <type>Lookup</type>
</CustomField>