source/objects/RS_Sales_Order_Extension__c/fields/Sales_Order_Header__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_Header__c</fullName>
    <description>Rootstock Sales Order</description>
    <inlineHelpText>Rootstock Sales Order</inlineHelpText>
    <label>Rootstock Sales Order</label>
    <referenceTo>rstk__sohdr__c</referenceTo>
    <relationshipLabel>RS Sales Order Extensions1x</relationshipLabel>
    <relationshipName>RS_Sales_Order_Extensions1x</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>