source/objects/RS_Sales_Order_Extension__c/fields/Trained_Date__c.field-meta.xml
<CustomField>
    <fullName>Trained_Date__c</fullName>
    <label>Trained Date</label>
    <type>Date</type>
</CustomField>