source/objects/RS_Sales_Order_Extension__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Sales_Order_Header__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Account__c</columns>
    <columns>Launch_Call_Date__c</columns>
    <columns>Install_Date__c</columns>
    <columns>Trained_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>